<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="45dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="45dp"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/dialog_username_not_found_title"
        android:textAlignment="center"
        android:textColor="@color/text_black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/dialog_username_not_found_subtitle"
        android:textAlignment="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/bg_gris_oscuro" />

    <LinearLayout
        android:id="@+id/lySendEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/dialog_account_not_found_get_help"
            android:textColor="@color/bg_blue_2" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/bg_gris_oscuro" />

    <LinearLayout
        android:id="@+id/lyRetry"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/dialog_account_not_found_try_again"
            android:textColor="@color/text_black" />


    </LinearLayout>


</LinearLayout>